--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="hu.vsza.android.cmp"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
     <application android:label="@string/app_name" >
         <activity android:name="Main"
                   android:label="@string/app_name">
