--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="14" />
+    <supports-screens android:largeScreens="true" />
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="Main"
                   android:label="@string/app_name">
